1029除宜紘合併可運作版本

--- a/PaiPaiGO/Views/CC_Members/Resgister.cshtml
+++ b/PaiPaiGO/Views/CC_Members/Resgister.cshtml
@@ -215,7 +215,7 @@
     function recordText() {
         document.getElementById('inputEmail').value = "miyeon0103@gmail.com";
         document.getElementById('inputPassword').value = "pin01033010";
-        document.getElementById('inputname').value = "曹薇娟";
+        document.getElementById('inputname').value = "春嬌";
         document.getElementById('inputphone').value = "0943456456";
         document.getElementById('inputAddress').value = "臺灣大道三段301號";
     }
