--- a/PaiPaiGO/Views/HS_Get_Text/Text_Buy.cshtml
+++ b/PaiPaiGO/Views/HS_Get_Text/Text_Buy.cshtml
@@ -55,6 +55,36 @@
             /* 控制右半圆的圆角半径 */
             transform: translateX(100%);
         }
+    /* 彈出視窗樣式 */
+    .modal {
+        display: none;
+        position: fixed;
+        z-index: 1000;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0,0,0,0.9);
+        align-items: center;
+        justify-content: center;
+    }
+
+    .modal-content {
+        width: auto; /* 自動寬度 */
+        max-height: 0; /* 初始為 0 */
+        transition: max-height 0.5s ease-out; /* 動畫效果 */
+        object-fit: contain; /* 保持寬高比 */
+    }
+
+
+    .close {
+        position: absolute;
+        top: 15px;
+        right: 35px;
+        color: #fff;
+        font-size: 40px;
+        cursor: pointer;
+    }
 </style>
 
 <body>
@@ -71,15 +101,38 @@
                     <h1>@TempData["BuyMissionName"]</h1>
                     <div style="color: gray;" class="mb-1">
                         <span>發布時間:</span>
-                        <span>@TempData["BuyOrderTime"]</span>
+                        @{
+                            DateTime OrderTime;
+                            if (DateTime.TryParse(TempData["BuyOrderTime"]?.ToString(), out OrderTime)) {
+                                string OT = OrderTime.ToString("yyyy/M/d tt hh:mm");
+                                ViewBag.OT = OT;
+                            }
+                        }
+                        <span>@ViewBag.OT</span>
                     </div>
                     <p class="mb-1" style="padding-top: 10px;">發佈人:<span>@TempData["BuyOrderMemberId"]</span></p>
                     <p class="mb-1">接單人:<span>@TempData["BuyAcceptMemberId"]</span></p>
                     <p class="mb-1">執行地點:<span>@TempData["BuyExecutionLocation"]</span></p>
                     <p class="mb-1">收貨方式:<span>@TempData["BuyDeliveryMethod"]</span></p>
+                    @{
+                        DateTime DeliveryDate;
+                        TimeSpan DeliveryTime;
+                        if (DateTime.TryParse(TempData["BuyDeliveryDate"]?.ToString(), out DeliveryDate)) {
+                            if (TimeSpan.TryParse(TempData["BuyDeliveryTime"]?.ToString(), out DeliveryTime)) {
+                                DateTime combinedDeliveryDateTime = DeliveryDate + DeliveryTime;
+
+                                string datePart = combinedDeliveryDateTime.ToString("yyyy/M/d");
+                                string timePart = combinedDeliveryDateTime.ToString("tt hh:mm");
+                                string combined = $"{datePart} {timePart}";
+
+                                ViewBag.DeliveryDateTime = combined;
+                            }
+                        }
+                    }
+                    <p class="mb-1">交貨時間:<span>@ViewBag.DeliveryDateTime</span></p>
 
                     <!-- 任務內容 OK-->
-                    <div style="position: relative; width: 470px;">
+                    <div style="position: relative;  width: 700px;">
                         <div style="position: absolute; top: 50px; left: -5px;background-color: #CDF4D1; padding: 5px; height: 20px;">
                             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-clipboard"
                                  width="20" height="20" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
@@ -96,7 +149,7 @@
                         <br><br>
                         <div style="border: 1px solid #000; padding: 5px; box-sizing: border-box; overflow: auto;">
                             <textarea style="width: 100%; height: 150px; border: none;background-color: #CDF4D1;">
-                                                                                                        @TempData["BuyMissionDescription"]
+                                                                                                            @TempData["BuyMissionDescription"]
                             </textarea>
                             <!-- 添加一个可以放置图片的空间 -->
                             <div style="margin-top: 10px;">
@@ -105,7 +158,14 @@
                                     <div style="max-width: 230px; flex: 1; margin: 5px;">
                                         @if (ViewBag.BuyImageData != null)
                                         {
-                                            <img class="img-fluid" style="max-width: 100%; height: auto;" src="@ViewBag.BuyImageData" alt="Image from Session" alt="Uploaded Image" style="width:150px" />
+                                            <!-- 顯示的圖片 -->
+                                            <img id="myImage" src="@ViewBag.BuyImageData" alt="Uploaded Image" style="width:150px; cursor: pointer;" />
+
+                                            <!-- 彈出視窗（Modal） -->
+                                            <div id="myModal" class="modal">
+                                                <span class="close">&times;</span>
+                                                <img class="modal-content" id="img01">
+                                            </div>
                                         }
                                     </div>
                                     <div style="max-width: 230px; flex: 1; margin: 5px;">
@@ -141,8 +201,8 @@
                             {
                                 DateTime combinedDateTime = DeadlineDate + DeadlineTime;
 
-                                string datePart = combinedDateTime.ToString("yyyy-MM-dd");
-                                string timePart = combinedDateTime.ToString("tt hh:mm:ss");
+                                string datePart = combinedDateTime.ToString("yyyy/M/d");
+                                string timePart = combinedDateTime.ToString("tt hh:mm");
                                 string combined = $"{datePart} {timePart}";
 
                                 ViewBag.CombinedDateTime = combined;
@@ -180,7 +240,7 @@
         }
         function geocodeAddress() {
             var geocoder = new google.maps.Geocoder();
-            var address = "@TempData["BuyLocationCity"]" + " " + "@TempData["BuyLocationDistrict"]" + " " + "@TempData["BuyAddress"]";  // 這裡填入您的縣市和地區字串
+            var address = "@TempData["BuyLocationCity"]" + " " + "@TempData["BuyLocationDistrict"]" + " " + "@TempData["BuyAddress"]";  
             geocoder.geocode({ 'address': address }, function (results, status) {
                 if (status === 'OK') {
                     map.setCenter(results[0].geometry.location);
@@ -189,7 +249,8 @@
                         position: results[0].geometry.location
                     });
                 } else {
-                    alert('Geocode was not successful for the following reason: ' + status);
+                    // alert('Geocode was not successful for the following reason: ' + status);
+                    alert('地理編碼失敗，原因為:' + status);
                 }
             });
         }
@@ -197,6 +258,49 @@
             initialize();  // 初始化地圖
             geocodeAddress();  // 進行地理編碼
         };
+
+        // Model放大圖片
+        document.addEventListener("DOMContentLoaded", function () {
+            var modal = document.getElementById("myModal");
+
+            var img = document.getElementById("myImage");
+            var modalImg = document.getElementById("img01");
+
+            // 點擊圖片時，顯示彈出視窗並放大圖片
+            img.onclick = function () {
+                modal.style.display = "flex";  // 使用 flex 布局使其垂直水平居中
+                modalImg.src = this.src; 
+                modalImg.style.maxHeight = "0"; 
+                setTimeout(function () {
+                    modalImg.style.maxHeight = "60%";  
+                }, 10);
+            };
+
+            // 獲取關閉按鈕元素
+            var span = document.getElementsByClassName("close")[0];
+
+            // 點擊關閉按鈕時，關閉彈出視窗
+            span.onclick = function () {
+                closeImage();
+            };
+
+            // 點擊彈出視窗以外的區域時，也關閉它
+            window.onclick = function (event) {
+                if (event.target === modal) {
+                    closeImage();
+                }
+            };
+
+            // 關閉圖片和模態視窗的函數
+            function closeImage() {
+                modalImg.style.maxHeight = "0";  
+                setTimeout(function () {
+                    modal.style.display = "none";  
+                    modalImg.src = ""; 
+                }, 510);  // 延遲稍微超過 500ms 以確保過渡效果完成
+            }
+        });
+
     </script>
 </body>
 
