--- a/PaiPaiGO/Views/HS_Pending/CheckOrder_Buy.cshtml
+++ b/PaiPaiGO/Views/HS_Pending/CheckOrder_Buy.cshtml
@@ -17,6 +17,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+            integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <style>
         /* 新增的 CSS 樣式 */
         #costDetails {
@@ -36,9 +40,9 @@
         }
 
         /* 內容字體大小為20px */
-        span {
+        /* span {
             font-size: 20px;
-        }
+        } */
     </style>
 </head>
 
@@ -51,15 +55,26 @@
                 <h1 style="text-align: center;">任務確認</h1>
                 <div class="row">
                     <div class="col-md-1"></div>
-
+                    @{
+                        DateTime BuyDelivery;
+                        DateTime BuyDeadline;
+                        if (DateTime.TryParse(TempData["BuyDelivery"]?.ToString(), out BuyDelivery)) {
+                            string BDD = BuyDelivery.ToString("yyyy/M/d tt hh:mm");
+                            ViewBag.BDD = BDD;
+                        };
+                        if (DateTime.TryParse(TempData["BuyDeadline"]?.ToString(), out BuyDelivery)) {
+                            string BD = BuyDelivery.ToString("yyyy/M/d tt hh:mm");
+                            ViewBag.BD = BD;
+                        }
+                    }
                     <!-- 左側內容 -->
                     <div class="col-md-4">
                         <p><strong>任務種類：</strong><span id="taskType">購買</span></p>
                         <p><strong>標籤：</strong><span id="taskLabel">@ViewBag.BuyLabel</span></p>
                         <p><strong>名稱：</strong><span id="taskName">@ViewBag.BuyName</span></p>
                         <p><strong>執行地點：</strong><span id="taskLocation">@ViewBag.BuyLocation</span></p>
-                        <p><strong>商品交貨時間：</strong><span id="deliveryTime">@TempData["BuyDelivery"]</span></p>
-                        <p><strong>截止時間：</strong><span id="deliveryTime">@TempData["BuyDeadline"]</span></p>
+                        <p><strong>商品交貨時間：</strong><span id="deliveryTime">@ViewBag.BDD</span></p>
+                        <p><strong>截止時間：</strong><span id="deliveryTime">@ViewBag.BD</span></p>
                         <p><strong>商品交貨地址：</strong><span id="deliveryAddress">@ViewBag.BuyCity @ViewBag.BuyDistrict @ViewBag.BuyAddress</span></p>
                         <p><strong>收貨方式：</strong><span id="deliveryMethod">@ViewBag.BuyDeliveryMethod</span></p>
                         <!-- 新增的圖片附件部分 -->
@@ -86,20 +101,33 @@
                             <div class="col-md-7"></div>
                             <div class="col-md-5">
                                 <!-- 費用明細 -->
-                                <div id="costDetails" style="background-color: gainsboro;width: 200px;text-align: left;">
-                                    <p><strong>任務金額：</strong><span id="taskAmount">$@ViewBag.BuyAmount</span></p>
-                                   @*  <p><strong>接單收費：</strong><span id="orderFee">$35</span></p>
-                                    <p><strong>平台抽成：</strong><span id="platformFee">$15</span></p>
-                                    <p><strong>總金額：</strong><span id="totalAmount">$@ViewBag.BuyTotalAmount</span></p> *@
+                                <div class="card" style="background-color: #F0F0F0; font-size: 25px;" id="costDetails">
+                                    <div class="card-header text-center" style="background-color: #D3D3D3; color: black;">
+                                        費用明細
+                                    </div>
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item d-flex justify-content-between align-items-center" style="background-color: #E5E5E5; color: black;">
+                                            <div class="text-left">任務金額</div>
+                                            <span class="badge rounded-pill" style="background-color: #A8A8A8;" id="taskAmount">$@ViewBag.BuyAmount</span>
+                                        </li>
+                                        <!-- 這裡可以添加更多項目 -->
+                                    </ul>
                                 </div>
+                                <br />
                             </div>
                         </div>
                         <div class="col-md-1"></div>
 
                         <!-- 修改和付款按鈕 -->
                         <div class="d-flex justify-content-end">
-                            <button type="button" id="changbtn" class="btn btn-primary" style="background-color: red; margin-right: 10px;">修改</button>
-                            <button type="button" id="postbtn" class="btn btn-success" style="background-color: #4B3DE7;">發布</button>
+                            <!-- 修改按鈕 -->
+                            <button type="button" id="changbtn" class="btn btn-danger me-2">
+                                修改
+                            </button>
+                            <!-- 發布按鈕 -->
+                            <button type="button" id="postbtn" class="btn btn-primary">
+                                發布
+                            </button>
                         </div>
 
                     </div>
@@ -192,20 +220,17 @@
             </div>
             @{
                 DateTime DeliveryDate;
-                if (DateTime.TryParse(@TempData["BuyDelivery"]?.ToString(), out DeliveryDate))
-                {
+                if (DateTime.TryParse(@TempData["BuyDelivery"]?.ToString(), out DeliveryDate)) {
                     var apple = DeliveryDate.ToString("yyyy-MM-dd HH:mm:ss").Replace(' ', 'T');
                     ViewBag.apple = apple;
                 }
                 DateTime parsedDate;
-                if (DateTime.TryParse(@TempData["BuyDeadline"]?.ToString(), out parsedDate))
-                {
+                if (DateTime.TryParse(@TempData["BuyDeadline"]?.ToString(), out parsedDate)) {
                     var Bee = parsedDate.ToString("yyyy-MM-dd HH:mm:ss").Replace(' ', 'T');
                     ViewBag.Bee = Bee;
                 }
                 DateTime nowdatetime;
-                if (DateTime.TryParse(DateTime.Now.ToString(), out nowdatetime))
-                {
+                if (DateTime.TryParse(DateTime.Now.ToString(), out nowdatetime)) {
                     var car = nowdatetime.ToString("yyyy-MM-dd HH:mm").Replace(' ', 'T');
                     ViewBag.car = car;
                 }
@@ -269,9 +294,6 @@
                 <input asp-for="ImagePath" class="form-control" value="@ViewBag.BuyImageData" />
                 <span asp-validation-for="ImagePath" class="text-danger"></span>
             </div>
-            @* <div class="form-group">
-            <input id="create-button" type="submit" value="Create" class="btn btn-primary" />
-            </div> *@
         </div>
     </form>
     <script>
@@ -279,17 +301,22 @@
             window.location.href = "/HS_Pending/PendingOrder_Buy";
         });
         document.getElementById("postbtn").addEventListener("click", function (event) {
-            // 將按鈕的 type 設為 button 以阻止表單提交
-            this.type = "button";
+            event.preventDefault(); // 防止表單自動提交
 
-            // 清除 Local Storage 中的資料
-            localStorage.removeItem("myFormData");
+            Swal.fire({
+                title: '完成',
+                text: '任務已成功發布!',
+                icon: 'success',
+                showCancelButton: false // 只顯示確認按鈕
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    // 清除 Local Storage 中的資料
+                    localStorage.removeItem("myFormData");
 
-            // 將按鈕的 type 改回 submit
-            this.type = "submit";
-
-            // 程式碼方式觸發 click 事件以提交表單
-            this.click();
+                    // 提交表單
+                    document.querySelector("form[method='post']").submit();
+                }
+            });
         });
     </script>
 </body>
