--- a/PaiPaiGO/Views/YU_Home/Index.cshtml
+++ b/PaiPaiGO/Views/YU_Home/Index.cshtml
@@ -8,7 +8,7 @@
 <html>
 
 <head>
-    <title>PaiPaiGo-代排對與代購網</title>
+    <title>PaiPaiGo-代排隊與代購</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
@@ -282,19 +282,17 @@
     <div class="content">
 
         <div class="main" id="section1">
-            <img src="~/img/Logo.png" alt="left" style="width: 300px; height: 100px; position: absolute; left:8%;">
+            <img src="~/img/Logo.png" alt="left" style="width: 330px; height: 100px; position: absolute; left:8%; top:2%;">
             <div class="bdtext">
                 <img src="~/img/Home1-1.gif" style="width: 100px; height: 150px; display: block; margin-bottom: -150px;" alt="">
                 <h1>你 我<br>都能幫忙!</h1>
                 <p style="color: #0A5812; font-size: 35px;">原來大家都在這裡， <br> 關於代購、代排隊的互助基地。</p>
-                <a href="@Url.Action("YH_CasePage", "YH_CasePages")">
-                    <button style="background-color: #085654; color: white; border-radius: 8px; padding: 15px 26px; font-size: 26px;">
-                        探索任務
-                    </button>
-                </a>
+                <form action="@Url.Action("YH_CasePage", "YH_CasePages")">
+                    <input type="submit" value="任務瀏覽" style="background-color: #085654; color: white; border-radius: 8px; padding: 15px 26px; font-size: 26px;">
+                </form>
             </div>
             <div class="bdimg">
-                <img src="~/img/Home1.png" style="width:1200px; height:655px;" alt="尚未放入圖片">
+                <img src="~/img/Home1.png" style="width:1200px; height:648px;" alt="尚未放入圖片">
             </div>
 
         </div>
@@ -312,46 +310,51 @@
             <div class="container">
                 <div class="item">
                     <img src="~/img/notes1.png" alt="尚未放入圖片">
-                    <p><a href="#">發布/接受任務</a></p>
+                    <p>刊登或接單</p>
                 </div>
                 &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
                 <div class="item">
                     <img src="~/img/map1.png" alt="尚未放入圖片">
-                    <p><a href="#">選擇地點</a></p>
+                    <p>選擇地點</p>
                 </div>
                 &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
                 <div class="item">
                     <img src="~/img/shake hands1.png" alt="尚未放入圖片">
-                    <p><a href="#">交易完成</a></p>
+                    <p>合作愉快</p>
                 </div>
             </div>
 
         </div>
     </div>
-
+   
     <!-- 第三頁 -->
     <div class="content">
         <div class="main" id="section3">
             <!-- <img src="./img/Logo.png" alt="left" style="float: left; width: 250px; height: 50px;" > -->
             <div class="bdtext1">
-                <h1 style="color: #23527A;"> 代購 & 代排隊的新選擇</h1>
-                <p style="font-size: 35px;"> 透過地圖的搜索任務與案件 <br> 在網站上，你可以尋求協助，也可以幫助別人!</p>
-                <p style="font-size: 35px;">還在等什麼? <br> 你想要尋求協助還是幫助他人呢?</p>
-                <br>
-                <a href="@Url.Action("YH_CasePage", "YH_CasePages")">
-                    <button style="background-color: #085654; color: white; border-radius: 8px; padding: 15px 26px; font-size: 26px;">
-                        探索任務
-                    </button>
-                </a>
-                &ensp;&ensp;
-                <a href="@Url.Action("PendingOrder_Pai", "HS_Pending")">
-                    <button style="background-color: blue; color: white; border-radius: 8px; padding: 15px 26px; font-size: 26px;">
-                        刊登任務
-                    </button>
-                </a>
+                <h1 style="color: #23527A; text-align:center;"> 代購 & 代排隊的新選擇</h1>
+                <p style="font-size: 32px;">
+                    我們是您的地區搜索任務與案件的平台，為您提供全新的代購與代排隊體驗。在我們的網站上，您有機會尋求協助，同時也能伸出援手，幫助他人！
+                    <br />
+                    <br />
+                    不要再猶豫，現在就開始行動吧！您是想尋求協助嗎？還是想幫助他人完成任務呢？我們為您提供了簡單而有效的方式，透過地區搜索任務，找到您所需的幫助，或者成為幫助的一部分。
+                    <br />
+                    <br />
+                
+                <div style="display: flex; justify-content: flex-start; align-items: center;">
+                    <form action="@Url.Action("YH_CasePage", "YH_CasePages")" style="margin-right: 20px;">
+                        <input type="submit" value="任務瀏覽" style="background-color: #085654; color: white; border-radius: 8px; padding: 15px 26px; font-size: 26px;">
+                    </form>
+                    &ensp;&ensp;
+                    <form action="@Url.Action("Login", "CC_Members")" style="margin-right: 20px;">
+						<input type="submit" value="任務刊登" style="background-color: blue; color: white; border-radius: 8px; padding: 15px 26px; font-size: 26px;">
+                    </form>
+
+                </div>
+
             </div>
             <div class="bdimg1">
-                <img src="~/img/2.png" style="float: right" alt="尚未放入圖片">
+                <img src="~/img/Home3.gif" style="float:initial; width: 650px; height: 650px;" alt="尚未放入圖片">
             </div>
         </div>
     </div>
@@ -362,24 +365,26 @@
             <div class="bdtext2">
                 <!-- <img src="./img/Logo.png" alt="left" style="width: 250px; height: 50px;"> -->
 
-                <h1 style="color: #23527A; text-align:center;"> 關於我們!!!</h1>
-                <p style="font-size: 32px;">
-                    我們是一個代買與代排隊網站，提供會員們可以進行代買與代排隊，並以代買與代排隊來尋找可以協助的人。<br>
+                <h1 style="color: #23527A; text-align:center;">關於我們!!!</h1>
+                <p style="font-size: 30px;">
+                    歡迎來到我們的代購與代排隊平台！我們的使命是為您提供便捷的代購與代排隊服務，讓您無需因為時間不足而放棄您所需的事情。
+                    <br />
+                    <br />
+                    您可以輕鬆找到代為購買商品或排隊等候的人，無論是超市購物或是活動現場等等，我們都能滿足您的需求。
+                    <br />
+                    <br />
+                    我們的網站不僅提供了一個平台，讓志願者們能夠幫助他人，同時也為需要協助的人提供了更多選擇，不再只有放棄的選項。
 
-                    在台灣已經有很多徵才的網站，但少有個平台，可以整合本地當下有時間的人，使得每次無法親自去採購或是排隊時，只能選擇放棄。
-                    <br>
-                    不過，現在有了更好的辦法了，因為我們的出現，讓你的選擇不再只是放棄。
+                    無論您是需要刊登任務的人，還是願意伸出援手的接單者，都歡迎加入我們的平台，一起建立便捷的生活。
                 </p>
 
-                <h3 style="color: #130FD1;">都讀到這了，是該探索適合的案件了!!!</h3>
-                <a href="@Url.Action("YH_CasePage", "YH_CasePages")">
-                    <button style="background-color: #085654; color: white; border-radius: 8px; padding: 15px 26px; font-size: 26px;">
-                        探索任務
-                    </button>
-                </a>
+                <h3 style="color: #130FD1;">&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;都讀到這了，是該探索適合的案件了!!</h3>
+                <form action="@Url.Action("YH_CasePage", "YH_CasePages")" style="margin-left:250px;">
+                    &ensp;&ensp;&ensp;&ensp; <input type="submit" value="任務瀏覽" style="background-color: #085654; color: white; border-radius: 8px; padding: 15px 26px; font-size: 26px;">
+                </form>
             </div>
             <div class="bdimg2">
-                <img src="~/img/Home4.gif" style="width: 700px; height: 700px;" alt="尚未放入圖片">
+                <img src="~/img/humanWalk.gif" style="float: right; width: 650px; height: 650px; " alt="尚未放入圖片">
             </div>
         </div>
     </div>
