--- a/PaiPaiGO/Views/CC_Members/Login.cshtml
+++ b/PaiPaiGO/Views/CC_Members/Login.cshtml
@@ -20,7 +20,7 @@
                 <!-- 登入帳號 -->
                 <div class="d-flex fs-6">
                     <img class="me-2 mt-3 mb-3" src="~/img/CC_user.png" style="height: 30px;">
-                    <div class="form-floating  mb-3 w-100">
+                    <div class="form-floating  mb-3 w-100" onclick="loginMember2()">
                         <input type="email" class="form-control" id="EmailInput" name="username" placeholder="name@example.com">
                         <label for="floatingInput">Email地址</label>
                     </div>
@@ -86,6 +86,12 @@
         document.getElementById('EmailInput').value = "miyeon0103@gmail.com";
         document.getElementById('PasswordInput').value = "pin01033010";
     }
+
+    function loginMember2() {
+        document.getElementById('EmailInput').value = "yena0929@gmail.com";
+        document.getElementById('PasswordInput').value = "pin09299290";
+    }
+
 </script>
 
 @if (ViewBag.Status == "異常") {
